# yew-yewdux

./: .gitignore  Cargo.toml  README.md  index.html
src/: main.rs  routing.rs  store.rs
src/components/: alert.rs  feedback_form.rs  feedback_item.rs  feedback_list.rs  feedback_stats.rs  mod.rs  rating.rs
src/components/table/: mod.rs  table.rs  table_cell.rs  table_head_cell.rs
src/pages/: home.rs  login.rs  mod.rs  not_found.rs  rating.rs
src/utils/: get_val_and_len.rs  is_eq.rs  mod.rs
styles/: tailwind.css
