[package]
name = "yew-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.20.0", features = ["csr"] }
yew-router = "0.17.0"
gloo-net = "0.3.0"
serde = { version = "1.0.164", features = ["derive"] }
wasm-bindgen-futures = "0.4.37"
log = "0.4.19"
wasm-logger = "0.2.0"
gloo-console = "0.2.3"
yewdux = "0.9.3"
web-sys = { version = "0.3.64", features = ["HtmlInputElement", "Window"] }
uuid = { version = "1.3.4", features = ["serde", "v4"] }
gloo = "0.8.1"
wasm-bindgen = "0.2.87"
getrandom = { version = "0.2", features = ["js"] }
